# PrDS_2024__TelcoCustomerChurn

./: .Rhistory  .gitignore  .pre-commit-config.yaml  Gruopu_13_eda_py.ipynb  PrDS_2024__TelcoCustomerChurn.Rproj  README.md  Room_4.Rmd  Room_4.html  SECURITY.md  eda.Rmd  eda.html  eda.md  eda.nb.html  eda_py.ipynb  joto_model_Room_8_today.Rmd  main.py  model_Room_8.Rmd  model_Room_8.html  model_Room_8.tex  model_Room_8_today.Rmd  pyproject.toml
.Rproj.user/58317834/: rmd-outputs
.Rproj.user/58317834/pcs/: files-pane.pper  source-window.pper  windowlayoutstate.pper
.Rproj.user/58317834/sources/prop/: AF9B31AE  INDEX
.Rproj.user/58317834/sources/session-bc8e2065/: 45032E2F-contents  89A253E4  89A253E4-contents  AEBA27C9  AEBA27C9-contents
.Rproj.user/shared/notebooks/: paths
.Rproj.user/shared/notebooks/09DB6E37-eda/1/s/: chunks.json
.Rproj.user/shared/notebooks/09DB6E37-eda/1/s/c52lblrfqq7h2/: 000011.csv
.Rproj.user/shared/notebooks/09DB6E37-eda/1/s/c79cxcpozdbgp/: 00000f.csv
.Rproj.user/shared/notebooks/09DB6E37-eda/1/s/cgzlq5r51b0ty/: 00000f.csv
.Rproj.user/shared/notebooks/09DB6E37-eda/1/s/cy7izqq1ymmqt/: 000002.csv  000003.csv  000003.metadata  000003.rdf
.github/workflows/: ci.yml  security.yml  setup_environment.yml
config/: __init__.py
data/processed/: data.csv  df_dummies.csv  statistical_results.json
notebooks/: room12_eda_20240203.ipynb  room12_eda_20240220_ml.ipynb
rsconnect/documents/model_Room_8.Rmd/rpubs.com/rpubs/: Document.dcf  Publish Document.dcf
rsconnect/documents/model_Room_8.html/rpubs.com/rpubs/: Document.dcf
